Auto-apply zone operator to the model observables, Optimizations to when angular2 zone is run New field select operator

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "types": [
       "zone.js",
       "@types/chai",
-      "@types/meteor",
+      "meteor-typings",
       "@types/underscore"
     ]
   },
