--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "babel-runtime": "^6.18.0",
     "rxjs": "^5.0.1 || ^5.0.0-rc.4 || ^5.0.0-beta.12"
   },
+  "dependencies": {
+    "meteor-typings": "^1.3.1"
+  },
   "devDependencies": {
     "@types/chai": "^3.4.34",
     "@types/mocha": "2.2.35",
